--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<div class="car__step step1"></div>
 					<div class="car__step step2"></div>
 					<div class="car__window-1">
-						<img src="/img/5.jpg" alt="fireman">
+						<img src="img/5.jpg" alt="fireman">
 					</div>
 					<div class="car__window-2"></div>
 				</div>
